Resume-Analyzer/server/scripts/archive/test_out.txt
file:///C:/Users/Tejasri/OneDrive/Desktop/AI/Resume-Analyzer/server/test_apply.js:49
        console.log('✅ Successfully applied Alex Demo to Sarah\\'s Agentic AI Job!');
                    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

SyntaxError: missing ) after argument list
    at compileSourceTextModule (node:internal/modules/esm/utils:344:16)
    at ModuleLoader.moduleStrategy (node:internal/modules/esm/translators:105:18)
    at #translate (node:internal/modules/esm/loader:534:12)
    at ModuleLoader.loadAndTranslate (node:internal/modules/esm/loader:581:27)
    at async ModuleJob._link (node:internal/modules/esm/module_job:154:19)

Node.js v22.17.1
